Name:                 bird
Version:              0.0.19
Build-type:           Simple
Synopsis:             A simple, sinatra-inspired web framework.
Description:          Bird is a hack-compatible framework for simple websites.
License:              BSD3
License-file:         LICENSE
Author:               Parker, Matt
Maintainer:           Parker, Matt <moonmaster9000@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Web
homepage:             http://github.com/moonmaster9000/bird
data-files:           readme.markdown

Executable bird
  main-Is: bird.hs
  hs-source-dirs: bin
  
library
  build-depends: haskell98, MissingH >= 1.1.0.3, mtl >= 1.1.0.2, process, containers, parsec >= 2.1.0.1, bytestring, base >= 4.0 && < 5, hack >= 2009.10.30, hack-handler-happstack, data-default >= 0.2, rallod 
  exposed-modules: Bird, Bird.Logger, Bird.Config, Bird.Request, Bird.Reply, Bird.Request.QueryStringParser, Bird.Request.UrlencodedFormParser, Bird.BirdResponder, Bird.Translator, Bird.Translator.Hack
  hs-source-dirs: src/
